[package]
name = "app"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
bson = { version = "2.2.0", features = ["chrono-0_4"] }
futures = "0.3.21"
itertools = "0.10.3"
mongodb = "2.2.1"
reqwest = "0.11.10"
serde = "1.0.137"
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["full"] }
