[package]
name = "server"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
chrono = { version = "0.4.19", features = ["serde"] }
app = { path = "../app" }
env_logger = "0.9.0"
serde = "1.0.137"
serde_json = "1.0.81"
thiserror = "1.0.31"
mongodb = {version="2.2.1", features=["bson-serde_with", "bson-chrono-0_4"]}
